refactored home view and pagination

--- a/netaccess/matman/templates/matman/material_detail.html
+++ b/netaccess/matman/templates/matman/material_detail.html
@@ -16,34 +16,34 @@
 <h1>{{ object }}</h1>
 <!--    Buttons    -->
 <section class="btn-group" role="group" aria-label="Basic example"">
-    <a class="btn btn-outline-secondary" href="{% url "material-edit" object.identifier %}">
+    <a class="btn btn-outline-primary" href="{% url "material-edit" object.identifier %}">
         <svg class="bi flex-shrink-0" role="img" aria-label="Info:"><use xlink:href="#edit"/></svg>
         <spa>Edit</spa>
     </a>
     {% if not object.get_active_borrow and object.is_active %}
-    <a class="btn btn-outline-secondary" href="{% url "borrow" object.identifier %}">
+    <a class="btn btn-outline-primary" href="{% url "borrow" object.identifier %}">
         <svg class="bi flex-shrink-0" role="img" aria-label="Info:"><use xlink:href="#symbol-borrow"/></svg>
         <span>Borrow</span>
     </a>
     {% endif %}
     {% if object.get_active_borrow %}
-    <a class="btn btn-outline-secondary" href="{% url "return" object.get_active_borrow.pk %}">
+    <a class="btn btn-outline-primary" href="{% url "return" object.get_active_borrow.pk %}">
         <svg class="bi flex-shrink-0" role="img" aria-label="Info:"><use xlink:href="#symbol-undo"/></svg>
         <spa>Return Item</spa>
     </a>
     {% endif %}
-    <a class="btn btn-outline-secondary" href="{% url "add-material" %}?reference={{ object.identifier }}">
+    <a class="btn btn-outline-primary" href="{% url "add-material" %}?reference={{ object.identifier }}">
         <svg class="bi flex-shrink-0" role="img" aria-label="Info:"><use xlink:href="#clone"/></svg>
         <spa>Copy/Clone</spa>
     </a>
     {% if user.is_authenticated %}
     {% if is_bookmarked %}
-    <button class="btn btn-outline-secondary" type="button" title="Bookmarked" value="{{ object.identifier }}" id="id_button_bookmark_{{ object.identifier }}" onclick="toggle_bookmark(this)">
+    <button class="btn btn-outline-primary" type="button" title="Bookmarked" value="{{ object.identifier }}" id="id_button_bookmark_{{ object.identifier }}" onclick="toggle_bookmark(this)">
         <svg class="bi flex-shrink-0" role="img" aria-label="Info:"><use xlink:href="#bookmark-check-fill"/></svg>
         <span class="text">Bookmarked</span>
     </button>
     {% else %}
-    <button class="btn btn-outline-secondary" type="button" title="Bookmark" value="{{ object.identifier }}" id="id_button_bookmark_{{ object.identifier }}" onclick="toggle_bookmark(this)">
+    <button class="btn btn-outline-primary" type="button" title="Bookmark" value="{{ object.identifier }}" id="id_button_bookmark_{{ object.identifier }}" onclick="toggle_bookmark(this)">
         <svg class="bi flex-shrink-0" role="img" aria-label="Info:"><use xlink:href="#bookmark"/></svg>
         <span class="text">Bookmark</span>
     </button>
