--- a/netaccess/matman/templates/matman/home.html
+++ b/netaccess/matman/templates/matman/home.html
@@ -9,123 +9,48 @@
 
 {% block content %}
 <h1>My Materials</h1>
-<div class="accordion" id="itemAccorion">
-  <div class="accordion-item">
-    <h2 class="accordion-header" id="headingOne">
-      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-        Currently borrowed ({{ borrowed_total }})
-      </button>
-    </h2>
-    <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
-      <div class="accordion-body">
-         <table class="table table-striped table-hover sortable-table" id="material-table-borrowed">
-            <tr>
-                <th class="column-header-id">ID</th>
-                <th class="column-header-owner">Owner</th>
-                <th>Serial Number</th>
-                <th>Material Number</th>
-                <th>Manufacturer</th>
-                <th>Department</th>
-                <th>Location</th>
-                <th>Tags</th>
-            </tr>
-            {% for object in borrowed %}
-            <tr>
-                <th><a href="{% url "material-detail" object.identifier %}">{{ object.identifier }}</a></th>
-                <td><a href="{% url "profile" object.owner %}">{{ object.owner }}</a></td>
-                <td>{{ object.serial_number }}</td>
-                <td>{{ object.material_number }}</td>
-                <td>{{ object.manufacturer }}</td>
-                <td>{{ object.department }}</td>
-                <td>{{ object.location }}</td>
-                <td>{{ object.tags.all|join:", " }}</td>
-            </tr>
-            {% empty %}
-            <tr><td>None</td></tr>
-            {% endfor %}
-         </table>
-         {% include "pagination.html" with page_obj=borrowed page_param="borrowed_page" %}
-      </div>
+<div class="accordion" id="id_item_accordion">
+    {% for name, rubric in rubrics.items %}
+    <div class="accordion-item">
+        <h2 class="accordion-header" id="id_accordion_header_{{ name }}">
+            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#id_collapse_{{ name }}" aria-expanded="true" aria-controls="collapse_{{ name }}">
+                {{ rubric.title }} ({{ rubric.total }})
+            </button>
+        </h2>
+        <div id="id_collapse_{{ name }}" class="accordion-collapse collapse {% if rubric.is_open %}show{% endif %}" aria-labelledby="collapse_{{ name }}" data-bs-parent="#id_item_accordion">
+            <div class="accordion-body">
+                <table class="table table-striped table-hover sortable-table" id="material_table_{{ name }}">
+                    <tr>
+                        <th class="column-header-id">ID</th>
+                        <th class="column-header-owner">Owner</th>
+                        <th>Serial Number</th>
+                        <th>Material Number</th>
+                        <th>Manufacturer</th>
+                        <th>Department</th>
+                        <th>Location</th>
+                        <th>Tags</th>
+                    </tr>
+                    {% for object in rubric.page %}
+                    <tr>
+                        <th><a href="{% url "material-detail" object.identifier %}">{{ object.identifier }}</a></th>
+                        <td><a href="{% url "profile" object.owner %}">{{ object.owner }}</a></td>
+                        <td>{{ object.serial_number }}</td>
+                        <td>{{ object.material_number }}</td>
+                        <td>{{ object.manufacturer }}</td>
+                        <td>{{ object.department }}</td>
+                        <td>{{ object.location }}</td>
+                        <td>{{ object.tags.all|join:", " }}</td>
+                    </tr>
+                    {% empty %}
+                    <tr><td>None</td></tr>
+                    {% endfor %}
+                </table>
+                {% include "pagination.html" with page_obj=rubric.page page_param=name|add:"_page" %}
+            </div>
+        </div>
     </div>
-  </div>
-  <div class="accordion-item">
-    <h2 class="accordion-header" id="headingTwo">
-      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-        Currently borrowed to others ({{ lent_total }})
-      </button>
-    </h2>
-    <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
-      <div class="accordion-body">
-         <table class="table table-striped table-hover">
-            <tr>
-                <th>ID</th>
-                <th>Borrowed By</th>
-                <th>Serial Number</th>
-                <th>Material Number</th>
-                <th>Manufacturer</th>
-                <th>Department</th>
-                <th>Location</th>
-                <th>Tags</th>
-            </tr>
-            {% for object in lent %}
-            <tr>
-                <th><a href="{% url "material-detail" object.identifier %}">{{ object.identifier }}</a></th>
-                {% with by=object.get_active_borrow.borrowed_by %}
-                <td><a href="{% url "profile" by %}">{{ by }}</a></td>
-                {% endwith %}
-                <td>{{ object.serial_number }}</td>
-                <td>{{ object.material_number }}</td>
-                <td>{{ object.manufacturer }}</td>
-                <td>{{ object.department }}</td>
-                <td>{{ object.location }}</td>
-                <td>{{ object.tags.all|join:", " }}</td>
-            </tr>
-            {% empty %}
-            <tr><td>None</td></tr>
-            {% endfor %}
-         </table>
-         {% include "pagination.html" with page_obj=lent page_param="lent_page" %}
-      </div>
-    </div>
-  </div>
-  <div class="accordion-item">
-    <h2 class="accordion-header" id="headingThree">
-      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-        Owned Materials ({{ my_materials_total }})
-      </button>
-    </h2>
-    <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
-      <div class="accordion-body">
-        <table  class="table table-striped table-hover">
-            <tr>
-                <th>ID</th>
-                <th>Serial Number</th>
-                <th>Material Number</th>
-                <th>Manufacturer</th>
-                <th>Department</th>
-                <th>Location</th>
-                <th>Owner</th>
-                <th>Tags</th>
-            </tr>
-            {% for object in my_materials %}
-            <tr>
-                <th><a href="{% url "material-detail" object.identifier %}">{{ object.identifier }}</a></th>
-                <td>{{ object.serial_number }}</td>
-                <td>{{ object.material_number }}</td>
-                <td>{{ object.manufacturer }}</td>
-                <td>{{ object.department }}</td>
-                <td>{{ object.location }}</td>
-                <td>{{ object.owner }}</td>
-                <td>{{ object.tags.all|join:", " }}</td>
-            </tr>
-            {% empty %}
-            <tr><td>None</td></tr>
-            {% endfor %}
-        </table>
-        {% include "pagination.html" with page_obj=my_materials page_param="my_materials_page" %}
-      </div>
-    </div>
-  </div>
+    {% endfor %}
+
 </div>
 {% endblock %}
 
