--- a/netaccess/matman/templates/pagination.html
+++ b/netaccess/matman/templates/pagination.html
@@ -3,8 +3,8 @@
 <nav aria-label="Page navigation example">
     <ul class="pagination">
         {% if page_obj.has_previous %}
-        <li class="page-item"><a class="page-link" href="?{% update_params page_param "1" %}">First</a></li>
-        <li class="page-item"><a class="page-link" href="?{% update_params page_param page_obj.previous_page_number %}">Previous</a></li>
+        <li class="page-item"><a class="page-link" href="{% update_params page_param "1" %}">First</a></li>
+        <li class="page-item"><a class="page-link" href="{% update_params page_param page_obj.previous_page_number %}">Previous</a></li>
         {% else %}
         <li class="page-item disabled"><a class="page-link" href="#">First</a></li>
         <li class="page-item disabled"><a class="page-link" href="#">Previous</a></li>
@@ -14,13 +14,13 @@
           {% if page_obj.number == i %}
             <li class="page-item active"><a class="page-link" href="#">{{ i }}</a></li>
           {% elif i > page_obj.number|add:'-3' and i < page_obj.number|add:'3' %}
-            <li class="page-item"><a class="page-link" href="?{% update_params page_param i %}">{{ i }}</a></li>
+            <li class="page-item"><a class="page-link" href="{% update_params page_param i %}">{{ i }}</a></li>
           {% endif %}
         {% endfor %}
 
         {% if page_obj.has_next %}
-        <li class="page-item"><a class="page-link" href="?{% update_params page_param page_obj.next_page_number %}">Next</a></li>
-        <li class="page-item"><a class="page-link" href="?{% update_params page_param page_obj.paginator.num_pages %}">Last</a></li>
+        <li class="page-item"><a class="page-link" href="{% update_params page_param page_obj.next_page_number %}">Next</a></li>
+        <li class="page-item"><a class="page-link" href="{% update_params page_param page_obj.paginator.num_pages %}">Last</a></li>
         {% else %}
         <li class="page-item disabled"><a class="page-link" href="#">Next</a></li>
         <li class="page-item disabled"><a class="page-link" href="#">Last</a></li>
