moved add new button to navbar

--- a/netaccess/matman/templates/header.html
+++ b/netaccess/matman/templates/header.html
@@ -19,6 +19,12 @@
                     </a>
                 </li>
                 <li class="nav-item">
+                    <a href="{% url "add-material" %}" class="nav-link" aria-current="page">
+                        <svg class="bi flex-1" role="img" aria-label="Info:"><use xlink:href="#symbol-plus"/></svg>
+                        <span>Add Material</span>
+                    </a>
+                </li>
+                <li class="nav-item">
                     <a href="{% url "home" %}" class="nav-link" aria-current="page">
                         <svg class="bi flex-shrink-0" role="img" aria-label="Info:"><use xlink:href="#symbol-home"/></svg>
                         <span>My Page</span>
