Refactored user module, tables, etc

--- a/netaccess/matman/templates/header.html
+++ b/netaccess/matman/templates/header.html
@@ -7,29 +7,37 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a href="{% url "quick-borrow" %}" class="nav-link" aria-current="page">
+                    <a href="{% url "quick-borrow" %}" class="nav-link{% if active == 'quick' %} active{% endif %}" aria-current="page">
                     <svg class="bi flex-shrink-0" role="img" aria-label="Info:"><use xlink:href="#symbol-borrow"/></svg>
                     <span>Borrow/Return</span>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="{% url "list-material" %}" class="nav-link" aria-current="page">
+                    <a href="{% url "list-material" %}" class="nav-link{% if active == 'search' %} active{% endif %}" aria-current="page">
                         <svg class="bi flex-shrink-0" role="img" aria-label="Info:"><use xlink:href="#symbol-lens"/></svg>
                         <spa>Search</spa>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="{% url "add-material" %}" class="nav-link" aria-current="page">
+                    <a href="{% url "add-material" %}" class="nav-link{% if active == 'add' %} active{% endif %}" aria-current="page">
                         <svg class="bi flex-1" role="img" aria-label="Info:"><use xlink:href="#symbol-plus"/></svg>
                         <span>Add Material</span>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="{% url "home" %}" class="nav-link" aria-current="page">
+                    <a href="{% url "home" %}" class="nav-link{% if active == 'home' %} active{% endif %}" aria-current="page">
                         <svg class="bi flex-shrink-0" role="img" aria-label="Info:"><use xlink:href="#symbol-home"/></svg>
                         <span>My Page</span>
                     </a>
                 </li>
+                {% if request.user.is_authenticated %}
+                <li class="nav-item">
+                    <a href="{% url "admin:index" %}" class="nav-link{% if active == 'admin' %} active{% endif %}" aria-current="page">
+                    <svg class="bi flex-shrink-0" role="img" aria-label="Info:"><use xlink:href="#symbol-admin"/></svg>
+                    <span>Admin</span>
+                    </a>
+                </li>
+                {% endif %}
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                     <svg class="bi flex-shrink-0" role="img" aria-label="Info:"><use xlink:href="#symbol-profile"/></svg>
@@ -37,10 +45,14 @@
                   </a>
                   <ul class="dropdown-menu">
                       <li>
-                        <a href="{% url "profile-settings" %}" class="dropdown-item" aria-current="page">Settings</a>
+                          <a href="{% url "profile-settings" %}" class="dropdown-item{% if active == 'settings' %} active{% endif %}" aria-current="page">
+                            Settings
+                          </a>
                       </li>
                       <li>
-                          <a href="{% url "list-schemes" %}" class="dropdown-item" aria-current="page">Schemes</a>
+                          <a href="{% url "list-schemes" %}" class="dropdown-item{% if active == 'schemes' %} active{% endif %}" aria-current="page">
+                            Schemes
+                          </a>
                       </li>
                       <li><hr class="dropdown-divider"></li>
                     {% if request.user.is_authenticated %}
