--- a/netaccess/matman/templates/matman/search.html
+++ b/netaccess/matman/templates/matman/search.html
@@ -29,7 +29,7 @@
           <th>{{ object.rank }}</th>
           <th><a href="{% url "material-detail" object.identifier %}">{{ object.identifier }}</a></th>
           <td>{{ object.serial_number }}</td>
-          <td>{{ object.material_number }}</td>
+          <td>{{ object.part_number }}</td>
           <td>{{ object.manufacturer }}</td>
           <td>{{ object.department }}</td>
           <td>{{ object.location }}</td>
