--- a/netaccess/matman/templates/matman/borrow_close.html
+++ b/netaccess/matman/templates/matman/borrow_close.html
@@ -4,15 +4,19 @@
 {% block title %}Return {{ material }}{% endblock %}
 
 {% block content %}
-  <h1>Return {{ material }}?</h1>
-  <p>Do you want to return {{ material }}?</p>
-  <p>IMPORTANT: Only do this when you physically return the material! Not anytime before!</p>
-<!--  <form method="post">-->
-<!--    {% csrf_token %}-->
-<!--    <div>-->
-<!--      <button type="button" name="no" class="btn btn-secondary" onclick="history.back()">Cancel</button>-->
-<!--      <button type="submit" value="close" name="close" class="btn btn-primary">Return {{ material }}</button>-->
-<!--    </div>-->
-<!--  </form>-->
+<h1>Return {{ material }}?</h1>
+<p>Do you want to return {{ material }}?</p>
+<p>IMPORTANT: Only do this when you physically return the material! Not anytime before!</p>
+<form method="post">
+  {% csrf_token %}
   {% crispy form %}
+  <button type="button" class="btn btn-outline-secondary" onclick="history.back()">
+    <svg class="bi flex-1" role="img" aria-label="Info:"><use xlink:href="#symbol-back"/></svg>
+    <span>Go back</span>
+  </button>
+  <button type=submit" class="btn btn-primary">
+    <svg class="bi flex-1" role="img" aria-label="Info:"><use xlink:href="#symbol-undo"/></svg>
+    <span>Return & Close</span>
+  </button>
+</form>
 {% endblock %}
