--- a/netaccess/matman/templates/matman/material_list.html
+++ b/netaccess/matman/templates/matman/material_list.html
@@ -42,57 +42,6 @@
   </div>
 </div>
 
-<table class="table table-striped table-hover">
-    <tr>
-        <th>ID</th>
-        <th>Serial Number</th>
-        <th>Material Number</th>
-        <th>Manufacturer</th>
-        <th>Department</th>
-        <th>Location</th>
-        <th>Owner</th>
-        <th>Tags</th>
-        <th></th>
-    </tr>
-    {% for object in object_list %}
-    <tr>
-        <th><a href="{% url "material-detail" object.identifier %}">{{ object.identifier }}</a></th>
-        <td>{{ object.serial_number }}</td>
-        <td>{{ object.material_number }}</td>
-        <td>{{ object.manufacturer }}</td>
-        <td>{{ object.department }}</td>
-        <td>{{ object.location }}</td>
-        <td><a href="{% url "profile" object.owner %}">{{ object.owner }}</a></td>
-        <td>
-            {% for tag in object.tags.all %}
-            <a href="{% url "list-material" %}?tags__name={{ tag }}" class="badge text-bg-light">{{ tag }}</a>
-            {% endfor %}
-        </td>
-        <td class="d-flex flex-row">
-            <div class="dropdown p-1">
-                <button class="btn btn-outline-secondary m-1" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  <svg class="bi flex-shrink-0" role="img" aria-label="Info:"><use xlink:href="#three-dots"/></svg>
-                </button>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="{% url "material-edit" object.identifier %}">Edit</a></li>
-                  <li><a class="dropdown-item" href="{% url "add-material" %}?reference={{ object.identifier }}">Copy/Clone</a></li>
-                </ul>
-            </div>
-            {% if user.is_authenticated %}
-            {% if object in bookmarked %}
-            <button class="btn btn-outline-secondary m-1" type="button" title="Bookmarked" value="{{ object.identifier }}" id="id_button_bookmark_{{ object.identifier }}" onclick="toggle_bookmark(this)">
-                <svg class="bi flex-shrink-0" role="img" aria-label="Info:"><use xlink:href="#bookmark-check-fill"/></svg>
-            </button>
-            {% else %}
-            <button class="btn btn-outline-secondary m-1" type="button" title="Bookmark" value="{{ object.identifier }}" id="id_button_bookmark_{{ object.identifier }}" onclick="toggle_bookmark(this)">
-                <svg class="bi flex-shrink-0" role="img" aria-label="Info:"><use xlink:href="#bookmark"/></svg>
-            </button>
-            {% endif %}
-            {% endif %}
-        </td>
-    </tr>
-    {% endfor %}
-</table>
-{% include "pagination.html" with page_param="page" %}
+{% include "matman/material_table.html" with prefix="" orderby=orderby direction=direction page=page object_list=object_list %}
 {% csrf_token %}
 {% endblock %}
