--- a/netaccess/matman/templates/matman/scheme_create.html
+++ b/netaccess/matman/templates/matman/scheme_create.html
@@ -6,6 +6,7 @@
 {% block content %}
 <h1>Create new Scheme</h1>
 <form method="post">
+{% csrf_token %}
 {% crispy form %}
 <div class="form-buttons m-1">
     <button id="buttonSave" type="submit" value="Save" name="save" class="btn btn-primary" onclick="this.classList.add('loading')">
