--- a/netaccess/users/templates/registration/password_change_form.html
+++ b/netaccess/users/templates/registration/password_change_form.html
@@ -1,4 +1,5 @@
 {% extends "registration/settings_base.html" %}
+{% load crispy_forms_tags %}
 
 {% block title %}Change your password{% endblock %}
 
@@ -6,8 +7,8 @@
   <h1>Change your password</h1>
   <p>Use the form below to change your password.</p>
   <form method="post">
-    {{ form.as_p }}
-    <p><input type="submit" value="Change"></p>
+    {{ form|crispy }}
+    <button class="btn btn-primary" type="submit">Change</button>
     {% csrf_token %}
   </form>
 {% endblock %}
