--- a/netaccess/users/templates/registration/password_reset_confirm.html
+++ b/netaccess/users/templates/registration/password_reset_confirm.html
@@ -1,13 +1,14 @@
 {% extends "base.html" %}
+{% load crispy_forms_tags %}
 
-{% block title %}Reset your password{% endblock %}
+{% block title %}Reset Password{% endblock %}
 
 {% block content %}
-  <h1>Reset your password</h1>
+  <h1>Reset Password</h1>
   {% if validlink %}
     <p>Please enter your new password twice:</p>
     <form method="post">
-      {{ form.as_p }}
+      {{ form|crispy }}
       {% csrf_token %}
       <p><input type="submit" value="Change my password" /></p>
     </form>
