--- a/netaccess/users/templates/registration/password_reset_form.html
+++ b/netaccess/users/templates/registration/password_reset_form.html
@@ -1,13 +1,14 @@
 {% extends "base.html" %}
+{% load crispy_forms_tags %}
 
-{% block title %}Reset your password{% endblock %}
+{% block title %}Reset Password{% endblock %}
 
 {% block content %}
-  <h1>Forgotten your password?</h1>
-  <p>Enter your e-mail address to obtain a new password.</p>
+  <h1>Password Reset</h1>
+  <p>Forgotten your password?Enter your e-mail address to obtain a new password.</p>
   <form method="post">
-    {{ form.as_p }}
-    <p><input type="submit" value="Send e-mail"></p>
+    {{ form|crispy }}
     {% csrf_token %}
+    <button type="submit" class="btn btn-primary">Send E-Mail</button>
   </form>
 {% endblock %}
