--- a/netaccess/users/templates/registration/register.html
+++ b/netaccess/users/templates/registration/register.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load crispy_forms_tags %}
 
 {% block title %}Create an account{% endblock %}
 
@@ -6,8 +7,8 @@
   <h1>Create an account</h1>
   <p>Please, sign up using the following form:</p>
   <form method="post">
-    {{ user_form.as_p }}
+    {% crispy user_form %}
     {% csrf_token %}
-    <p><input type="submit" value="Create my account"></p>
+    <button class="btn btn-primary" type="submit">Register</button>
   </form>
 {% endblock %}
