--- a/netaccess/users/templates/registration/register_done.html
+++ b/netaccess/users/templates/registration/register_done.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Welcome{% endblock %}
+{% block title %}Welcome {{ new_user.username }}{% endblock %}
 
 {% block content %}
   <h1>Welcome {{ new_user.first_name }}!</h1>
