--- a/matman/items/templates/header.html
+++ b/matman/items/templates/header.html
@@ -1,3 +1,4 @@
+{% load usertags %}
         <nav class="navbar navbar-expand-lg bg-light">
           <div class="container-fluid">
             <a class="navbar-brand" href="{% url "quick-borrow" %}">MatMan</a>
@@ -54,6 +55,14 @@
                             Schemes
                           </a>
                       </li>
+                      {% get_pw_change_allowed  as pw_change_allowed %}
+                      {% if request.user.is_authenticated and pw_change_allowed %}
+                      <li>
+                          <a href="{% url "password-change" %}" class="dropdown-item{% if active == 'changepw' %} active{% endif %}" aria-current="page">
+                            Change Password
+                          </a>
+                      </li>
+                      {% endif %}
                       <li><hr class="dropdown-divider"></li>
                     {% if request.user.is_authenticated %}
                       <li><a class="dropdown-item" href="{% url "logout" %}" class="dropdown-item">Logout</a></li>
